tests/snapshots/test_meta__parse_meta_item_list_lit-2.snap
---
created: "2019-03-11T05:40:21.675781063Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo
        ),
        paren_token: Paren,
        nested: [
            Literal(
                Int(
                    LitInt {
                        token: Literal {
                            lit: 5
                        }
                    }
                )
            )
        ]
    }
)
