tests/snapshots/test_meta__parse_meta_item_list_with_path-2.snap
---
created: "2019-03-17T20:28:26.049833Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
List(
    MetaList {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                },
                Colon2,
                PathSegment {
                    ident: Ident(
                        bar
                    ),
                    arguments: None
                }
            ]
        },
        paren_token: Paren,
        nested: [
            Literal(
                Int(
                    LitInt {
                        token: Literal {
                            lit: 5
                        }
                    }
                )
            )
        ]
    }
)
