tests/snapshots/test_meta__parse_meta_item_multiple-2.snap
---
created: "2019-03-17T20:28:26.050832100Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
List(
    MetaList {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                }
            ]
        },
        paren_token: Paren,
        nested: [
            Meta(
                Path(
                    Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    word
                                ),
                                arguments: None
                            }
                        ]
                    }
                )
            ),
            Comma,
            Meta(
                NameValue(
                    MetaNameValue {
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        name
                                    ),
                                    arguments: None
                                }
                            ]
                        },
                        eq_token: Eq,
                        lit: Int(
                            LitInt {
                                token: Literal {
                                    lit: 5
                                }
                            }
                        )
                    }
                )
            ),
            Comma,
            Meta(
                List(
                    MetaList {
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        list
                                    ),
                                    arguments: None
                                }
                            ]
                        },
                        paren_token: Paren,
                        nested: [
                            Meta(
                                NameValue(
                                    MetaNameValue {
                                        path: Path {
                                            leading_colon: None,
                                            segments: [
                                                PathSegment {
                                                    ident: Ident(
                                                        name2
                                                    ),
                                                    arguments: None
                                                }
                                            ]
                                        },
                                        eq_token: Eq,
                                        lit: Int(
                                            LitInt {
                                                token: Literal {
                                                    lit: 6
                                                }
                                            }
                                        )
                                    }
                                )
                            )
                        ]
                    }
                )
            ),
            Comma,
            Meta(
                Path(
                    Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    word2
                                ),
                                arguments: None
                            }
                        ]
                    }
                )
            )
        ]
    }
)
