tests/snapshots/test_meta__parse_meta_item_word.snap
---
created: "2019-04-06T05:46:03.470744921Z"
creator: insta@0.7.4
source: tests/test_meta.rs
expression: syntax_tree
---
Word(
    Ident(
        hello,
    ),
)
