tests/snapshots/test_meta__parse_meta_name_value-2.snap
---
created: "2019-03-17T20:28:26.050832100Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                }
            ]
        },
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5
                }
            }
        )
    }
)
