tests/snapshots/test_meta__parse_meta_name_value.snap
---
created: "2019-04-06T05:46:03.470744904Z"
creator: insta@0.7.4
source: tests/test_meta.rs
expression: syntax_tree
---
MetaNameValue {
    ident: Ident(
        foo,
    ),
    eq_token: Eq,
    lit: Int(
        LitInt {
            token: Literal {
                lit: 5,
            },
        },
    ),
}
