tests/snapshots/test_meta__parse_meta_name_value_with_bool-2.snap
---
created: "2019-03-11T05:40:21.676510552Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            true
        ),
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5
                }
            }
        )
    }
)
