tests/snapshots/test_meta__parse_meta_name_value_with_bool.snap
---
created: "2019-03-17T21:23:15.803754400Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
MetaNameValue {
    path: Path {
        leading_colon: None,
        segments: [
            PathSegment {
                ident: Ident(
                    true
                ),
                arguments: None
            }
        ]
    },
    eq_token: Eq,
    lit: Int(
        LitInt {
            token: Literal {
                lit: 5
            }
        }
    )
}
